--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetalhePrato"></activity>
+        <activity android:name=".AdicionarCartaoActivity"></activity>
+        <activity
+            android:name=".CreditActivity"
+            android:label="@string/title_activity_credit"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".DetalhePrato" />
         <activity android:name=".PratosActivity" />
         <activity android:name=".Splash">
             <intent-filter>
